<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/bAttendance"
            android:text="@string/attendance"
            android:textSize="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/bPerson"
            android:text="@string/person"
            android:textSize="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/bStats"
            android:text="@string/stats"
            android:textSize="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/bExit"
            android:text="@string/exit"
            android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>
