<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loCreateGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvNameOfGroup"
                android:text="@string/nameGroup"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etNameOfGroup"
                android:gravity="end"
                android:textAlignment="textEnd"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvSetDate"
                android:text="@string/setDate"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etSetDate"
                android:hint="@string/dateFormatHint"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:ems="10"
                android:inputType="date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvCycle"
                android:text="@string/chooseCycle"/>
            <Spinner
                android:id="@+id/spCycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvParticipants"
                android:text="@string/participants"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etParticipants"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lvParticipants"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
